--- a/.github/workflows/build-smwrt.yml
+++ b/.github/workflows/build-smwrt.yml
@@ -35,7 +35,7 @@ jobs:
           sudo apt-get install -y \
             build-essential clang flex gawk gettext \
             git g++ libelf-dev libncurses5-dev \
-            libssl-dev python3 python3-distutils \
+            libssl-dev python3 python3-venv \
             python3-pkg-resources python3-pyelftools \
             rsync subversion swig time unzip wget \
             zlib1g-dev file
