--- a/.github/workflows/build-21.yml
+++ b/.github/workflows/build-21.yml
@@ -53,7 +53,8 @@ jobs:
       - name: Load custom .config from user-config directory
         run: |
           # Menyalin file konfigurasi lengkap dari lokasi yang ditentukan ke .config
-          cp user-config/config-zte-e8820v2 .config
+           CONFIG_URL="https://raw.githubusercontent.com/paralelunipers/sm-wrt/refs/heads/main/user-config/config-zte-e8820v2"
+          wget -q --show-progress -O .config $CONFIG_URL
 
       # 5. Buat .config lengkap dan bersih (Wajib ada untuk mengatasi opsi NEW)
       - name: Generate full and clean .config
