--- a/.github/workflows/build-smwrt.yml
+++ b/.github/workflows/build-smwrt.yml
@@ -38,8 +38,9 @@ jobs:
             libssl-dev python3 python3-venv \
             python3-pkg-resources python3-pyelftools \
             rsync subversion swig time unzip wget \
+            python3-pip python3-ply python-docutils libpython3-dev python-venv \
             zlib1g-dev file
-
+            
       # 3. Update dan install feeds OpenWrt
       - name: Update and install feeds
         run: |
