--- a/.github/workflows/build-smwrt.yml
+++ b/.github/workflows/build-smwrt.yml
@@ -38,7 +38,7 @@ jobs:
             libssl-dev python3 python3-venv \
             python3-pkg-resources python3-pyelftools \
             rsync subversion swig time unzip wget \
-            python3-pip python3-ply python-docutils libpython3-dev python-venv \
+            python3-pip python3-ply libpython3-dev \
             zlib1g-dev file
             
       # 3. Update dan install feeds OpenWrt
