--- a/.github/workflows/build-smwrt.yml
+++ b/.github/workflows/build-smwrt.yml
@@ -33,9 +33,8 @@ jobs:
             build-essential clang flex gawk gettext \
             git g++ libelf-dev libncurses5-dev \
             libssl-dev python3 python3-venv \
-            python3-pkg-resources python3-pyelftools \
+            python3-pkg-resources python3-pyelftools python3-pip python3-ply libpython3-dev\
             rsync subversion swig time unzip wget \
-            python3-pip python3-ply libpython3-dev \
             zlib1g-dev file
             
       # 3. Update dan install feeds OpenWrt
