--- a/.github/workflows/build-21.yml
+++ b/.github/workflows/build-21.yml
@@ -1,13 +1,7 @@
 name: Build OpenWrt (ZTE E8820V2) V21.02
 
 on:
-  # Izinkan run manual dari tab Actions
   workflow_dispatch:
-  # Otomatis build jika ada push ke branch main
-  push:
-    branches:
-      - main
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -39,7 +33,7 @@ jobs:
             build-essential clang flex gawk gettext \
             git g++ libelf-dev libncurses5-dev \
             libssl-dev python3 python3-venv \
-            python3-pkg-resources python3-pyelftools \
+            python3-pkg-resources python3-pyelftools python3-pip python3-ply libpython3-dev\
             rsync subversion swig time unzip wget \
             zlib1g-dev file
 
