--- a/.github/workflows/smwrt.yml
+++ b/.github/workflows/smwrt.yml
@@ -1,4 +1,4 @@
-name: Build OpenWrt (ZTE E8820V2)
+name: Build OpenWrt 24
 
 on:
   # Izinkan run manual dari tab Actions
@@ -61,7 +61,7 @@ jobs:
         run: |
           make -j$(nproc) V=s
 
-       - name: Prepare artifact
+      - name: Prepare artifact
         run: |
           mkdir -p ./artifact/package
           mkdir -p ./artifact/buildinfo
