--- a/.github/workflows/configgen.yml
+++ b/.github/workflows/configgen.yml
@@ -36,15 +36,10 @@ jobs:
 
       # 5. Buat .config lengkap dan bersih (Wajib ada untuk mengatasi opsi NEW)
       - name: Generate full and clean .config
-        run: make defconfig		
-      - name: Upload buildinfo
-        uses: actions/upload-artifact@main
-        with:
-          name: OpenWrt_config
-          path: ./artifact/buildinfo/
+        run: make defconfig
 
       - name: Upload config
         uses: actions/upload-artifact@main
         with:
-          name: OpenWrt_package
-          path: openwrt/.config
+          name: OpenWrt_config
+          path: .config
