--- a/.github/workflows/configgen.yml
+++ b/.github/workflows/configgen.yml
@@ -42,4 +42,4 @@ jobs:
         uses: actions/upload-artifact@main
         with:
           name: OpenWrt_config
-          path: .config
+          path: /.config
